@@ -53,8 +53,7 @@ spinglass.community <- function(graph, weights=NULL, vertex=NULL, spins=25,
           PACKAGE="igraph")
   } else {
     .Call("R_igraph_spinglass_my_community", graph, weights,
-          as.numeric(vertex), as.numeric(spins), as.logical(parupdate),
-          as.numeric(start.temp), as.numeric(stop.temp), as.numeric(cool.fact),
+          as.numeric(vertex), as.numeric(spins), 
           as.numeric(update.rule), as.numeric(gamma),
           PACKAGE="igraph")
   }    
